--- a/test-output/STMExtentReport.html
+++ b/test-output/STMExtentReport.html
@@ -46,7 +46,7 @@
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<li>
                 <a href='#!'>
-                    <span class='label suite-start-time blue darken-3'>Aug 6, 2018 11:32:12 AM</span>
+                    <span class='label suite-start-time blue darken-3'>Aug 7, 2018 02:48:53 PM</span>
 				</a>
 			</li>
 			<li>
@@ -158,14 +158,14 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
 						<span class='test-name'>test_SignUp</span>
-						<span class='test-time'>Aug 6, 2018 11:32:25 AM</span>
+						<span class='test-time'>Aug 7, 2018 02:49:09 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Aug 6, 2018 11:32:25 AM</span>
-	<span class='label end-time'>Aug 6, 2018 11:32:31 AM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 6s+597ms</span>
+	<span class='label start-time'>Aug 7, 2018 02:49:09 PM</span>
+	<span class='label end-time'>Aug 7, 2018 02:49:18 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 9s+103ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -179,72 +179,72 @@
 			<tbody>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>11:32:26 AM</td>
+					<td class='timestamp'>2:49:12 PM</td>
 					<td class='step-details'>Clicked on Signin Button</td>
 				</tr>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>11:32:27 AM</td>
+					<td class='timestamp'>2:49:13 PM</td>
 					<td class='step-details'>Email id entered for signup</td>
 				</tr>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>11:32:27 AM</td>
+					<td class='timestamp'>2:49:13 PM</td>
 					<td class='step-details'>Create Button Clicked</td>
 				</tr>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>11:32:28 AM</td>
+					<td class='timestamp'>2:49:14 PM</td>
 					<td class='step-details'>Firstname entered</td>
 				</tr>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>11:32:28 AM</td>
+					<td class='timestamp'>2:49:15 PM</td>
 					<td class='step-details'>Lastname entered</td>
 				</tr>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>11:32:28 AM</td>
+					<td class='timestamp'>2:49:15 PM</td>
 					<td class='step-details'>Password Entered</td>
 				</tr>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>11:32:29 AM</td>
+					<td class='timestamp'>2:49:15 PM</td>
 					<td class='step-details'>Day selected</td>
 				</tr>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>11:32:29 AM</td>
+					<td class='timestamp'>2:49:15 PM</td>
 					<td class='step-details'>Month selected</td>
 				</tr>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>11:32:29 AM</td>
+					<td class='timestamp'>2:49:15 PM</td>
 					<td class='step-details'>Year selected</td>
 				</tr>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>11:32:29 AM</td>
+					<td class='timestamp'>2:49:16 PM</td>
 					<td class='step-details'>State selected</td>
 				</tr>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>11:32:30 AM</td>
+					<td class='timestamp'>2:49:16 PM</td>
 					<td class='step-details'>Zipcode entered</td>
 				</tr>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>11:32:30 AM</td>
+					<td class='timestamp'>2:49:16 PM</td>
 					<td class='step-details'>Mobile Number entered</td>
 				</tr>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>11:32:31 AM</td>
+					<td class='timestamp'>2:49:18 PM</td>
 					<td class='step-details'>Submit button Clicked</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>11:32:31 AM</td>
+					<td class='timestamp'>2:49:18 PM</td>
 					<td class='step-details'>SignUp Flow PASSED</td>
 				</tr>
 			</tbody>
@@ -299,19 +299,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Aug 6, 2018 11:32:12 AM</div>
+					<div class='panel-lead'>Aug 7, 2018 02:48:53 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Aug 6, 2018 11:32:31 AM</div>
+			 		<div class='panel-lead'>Aug 7, 2018 02:49:18 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>0h 0m 19s+27ms</div>
+					<div class='panel-lead'>0h 0m 24s+810ms</div>
 				</div>
 			</div>
 			<div class='col s4'>
